--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -177,7 +177,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           pattern: monochrome-map-*
-          path: assets
+          path: assets/maps
           merge-multiple: true
 
       - name: git status
