--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -78,7 +78,7 @@ jobs:
 
   find_draft_map_files:
     runs-on: ubuntu-latest
-    # if: github.event_name != 'pull_request'
+    if: github.event_name != 'pull_request'
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
@@ -180,9 +180,6 @@ jobs:
           path: assets/maps
           merge-multiple: true
 
-      - name: git status
-        run: git status
-
       - name: Compile monochrome draft book
         uses: xu-cheng/latex-action@v3
         with:
@@ -219,16 +216,16 @@ jobs:
           path: drafts
           merge-multiple: true
 
-      # - name: Publish drafts in artifacts repository
-      #   uses: peaceiris/actions-gh-pages@v4
-      #   if: github.event_name != 'pull_request'
-      #   with:
-      #     deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
-      #     external_repository: qwrtln/Homm3BG-mission-book-build-artifacts
-      #     publish_branch: drafts
-      #     publish_dir: ./drafts
-      #     force_orphan: true
+      - name: Publish drafts in artifacts repository
+        uses: peaceiris/actions-gh-pages@v4
+        if: github.event_name != 'pull_request'
+        with:
+          deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
+          external_repository: qwrtln/Homm3BG-mission-book-build-artifacts
+          publish_branch: drafts
+          publish_dir: ./drafts
+          force_orphan: true
 
-      # - uses: geekyeggo/delete-artifact@v5
-      #   with:
-      #     name: monochrome-map-*
+      - uses: geekyeggo/delete-artifact@v5
+        with:
+          name: monochrome-map-*
