Include container in the docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ theme:
   features:
     - content.code.copy
     - navigation.instant
+    - content.tabs.link
   palette:
     # Palette toggle for automatic mode
     - media: "(prefers-color-scheme)"
@@ -33,6 +34,7 @@ nav:
   - Local Setup: index.md
   - Writing Scenarios: scenarios.md
   - Using Scripts: scripts.md
+  - Container-based  setup: container.md
 markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
@@ -41,3 +43,5 @@ markdown_extensions:
       anchor_linenums: true
       line_spans: __span
       pygments_lang_class: true
+  - pymdownx.tabbed:
+      alternate_style: true
