--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -217,15 +217,19 @@ jobs:
           config: "po4a.cfg"
           args: "--no-update"
 
-      - name: Cache LaTeX packages and build
+      - name: Cache LaTeX build
         uses: actions/cache@v4
         with:
           path: |
-            ./**/*.aux
-            ./**/*.log
-            ./**/*.toc
-            ./**/*.out
-            ./svg-inkscape
+            ./main_${{ matrix.language }}.aux
+            ./main_${{ matrix.language }}.fdb_latexmk
+            ./main_${{ matrix.language }}.fls
+            ./main_${{ matrix.language }}.out
+            ./main_${{ matrix.language }}.toc
+            ./campaigns/*.aux
+            ./coops/*.aux
+            ./clash/*.aux
+            ./sections/**/*.aux
           key: >-
             texlive-mono-${{ matrix.language }}-${{
             matrix.language == 'en'
@@ -234,6 +238,17 @@ jobs:
             }}
           restore-keys: |
             texlive-mono-${{ matrix.language }}-
+
+      - name: Cache Inkscape artifacts
+        if: steps.cache-pdf.outputs.cache-hit != 'true'
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./svg-inkscape
+          key: >-
+            inkscape-${{ hashFiles('assets/glyphs/*') }}
+          restore-keys: |
+            inkscape-
 
       - name: Download monochrome maps
         uses: actions/download-artifact@v4
